# esp32_a2dp_app

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.cpp
main/app/: app.cpp
main/app/include/app/: app.hpp
main/fc/: socket.cpp  time.cpp
main/fc/include/fc/: config.hpp  exception.hpp  signal.hpp  socket.hpp  time.hpp  utilities.hpp
main/freertospp/: freertospp.cpp
main/freertospp/include/freertospp/: freertospp.hpp
main/hardware/: a2dp.cpp  bluetooth.cpp  i2s.cpp  nvs_flash.cpp
main/hardware/include/hardware/: a2dp.hpp  bluetooth.hpp  i2s.hpp  nvs_flash.hpp  pin.hpp  writer.hpp
